noinst_LIBRARIES = libClntCfgMgr.a

libClntCfgMgr_a_SOURCES = ClntCfgAddr.cpp ClntCfgAddr.h ClntCfgIA.cpp ClntCfgIA.h ClntCfgIface.cpp ClntCfgIface.h ClntCfgMgr.cpp ClntCfgMgr.h ClntCfgPD.cpp ClntCfgPD.h ClntCfgPrefix.cpp ClntCfgPrefix.h ClntCfgTA.cpp ClntCfgTA.h ClntLexer.cpp ClntParsAddrOpt.cpp ClntParsAddrOpt.h ClntParser.cpp ClntParser.h ClntParsGlobalOpt.cpp ClntParsGlobalOpt.h ClntParsIAOpt.cpp ClntParsIAOpt.h ClntParsIfaceOpt.cpp ClntParsIfaceOpt.h
