noinst_LIBRARIES = libClntIfaceMgr.a

libClntIfaceMgr_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/IfaceMgr
libClntIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/ClntCfgMgr -I$(top_srcdir)/CfgMgr
libClntIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/ClntOptions
libClntIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/ClntAddrMgr -I$(top_srcdir)/ClntTransMgr
libClntIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/ClntMessages -I$(top_srcdir)/Messages
libClntIfaceMgr_a_CPPFLAGS += -I$(top_srcdir)/poslib/poslib -I$(top_srcdir)/poslib

libClntIfaceMgr_a_SOURCES = ClntIfaceIface.cpp ClntIfaceIface.h ClntIfaceMgr.cpp ClntIfaceMgr.h
