noinst_LIBRARIES = libClntMessages.a

libClntMessages_a_SOURCES = ClntMsgAdvertise.cpp ClntMsgAdvertise.h ClntMsgConfirm.cpp ClntMsgConfirm.h ClntMsg.cpp ClntMsgDecline.cpp ClntMsgDecline.h ClntMsg.h ClntMsgInfRequest.cpp ClntMsgInfRequest.h ClntMsgRebind.cpp ClntMsgRebind.h ClntMsgRelease.cpp ClntMsgRelease.h ClntMsgRenew.cpp ClntMsgRenew.h ClntMsgReply.cpp ClntMsgReply.h ClntMsgRequest.cpp ClntMsgRequest.h ClntMsgSolicit.cpp ClntMsgSolicit.h
