noinst_LIBRARIES = libClntMessages.a

libClntMessages_a_CPPFLAGS = -I$(top_srcdir)/Misc -I$(top_srcdir)/Messages -I$(top_srcdir)/Options -I$(top_srcdir)/ClntOptions
libClntMessages_a_CPPFLAGS += -I$(top_srcdir)/ClntIfaceMgr -I$(top_srcdir)/IfaceMgr -I$(top_srcdir)/ClntCfgMgr
libClntMessages_a_CPPFLAGS += -I$(top_srcdir)/CfgMgr -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/ClntAddrMgr
libClntMessages_a_CPPFLAGS += -I$(top_srcdir)/ClntTransMgr

libClntMessages_a_SOURCES = ClntMsgAdvertise.cpp ClntMsgAdvertise.h ClntMsgConfirm.cpp ClntMsgConfirm.h ClntMsg.cpp ClntMsgDecline.cpp ClntMsgDecline.h ClntMsg.h ClntMsgInfRequest.cpp ClntMsgInfRequest.h ClntMsgRebind.cpp ClntMsgRebind.h ClntMsgRelease.cpp ClntMsgRelease.h ClntMsgRenew.cpp ClntMsgRenew.h ClntMsgReply.cpp ClntMsgReply.h ClntMsgRequest.cpp ClntMsgRequest.h ClntMsgSolicit.cpp ClntMsgSolicit.h
