noinst_LIBRARIES = libClntTransMgr.a

libClntTransMgr_a_CPPFLAGS = -I$(top_srcdir)/ClntCfgMgr -I$(top_srcdir)/CfgMgr -I$(top_srcdir)/Misc
libClntTransMgr_a_CPPFLAGS += -I$(top_srcdir)/Options -I$(top_srcdir)/ClntOptions
libClntTransMgr_a_CPPFLAGS += -I$(top_srcdir)/AddrMgr -I$(top_srcdir)/ClntAddrMgr
libClntTransMgr_a_CPPFLAGS += -I$(top_srcdir)/ClntMessages -I$(top_srcdir)/Messages
libClntTransMgr_a_CPPFLAGS += -I$(top_srcdir)/ClntIfaceMgr -I$(top_srcdir)/IfaceMgr


libClntTransMgr_a_SOURCES = ClntTransMgr.cpp ClntTransMgr.h
