noinst_LIBRARIES = libIfaceMgr.a

libIfaceMgr_a_CPPFLAGS = -I$(top_srcdir)/poslib/poslib -I$(top_srcdir)/poslib -I$(top_srcdir)/Misc -I$(top_srcdir)/Messages -I$(top_srcdir)/Options

libIfaceMgr_a_SOURCES = DNSUpdate.cpp DNSUpdate.h Iface.cpp Iface.h IfaceMgr.cpp IfaceMgr.h SocketIPv6.cpp SocketIPv6.h
