noinst_LIBRARIES = libMisc.a

libMisc_a_SOURCES = addrpack.c base64.c base64.h Container.h DHCPConst.cpp DHCPConst.h DHCPDefaults.h dibbler-config.h DUID.cpp DUID.h FQDN.cpp FQDN.h hmac.h hmac-sha-md5.c IPv6Addr.cpp IPv6Addr.h KeyList.cpp KeyList.h Logger.cpp Logger.h long128.cpp long128.h md5.c md5.h Portable.h sha1.c sha1.h sha256.c sha256.h sha512.c sha512.h SmartPtr.h SrvCommon.h ScriptParams.cpp ScriptParams.h lowlevel-posix.c
